# wlc_acl

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE_NOTES.md  WlcRoleAclCollectorGUI.spec  app.py  build_windows_combined_release.ps1  build_windows_gui_exe.ps1  build_windows_streamlit_portable.ps1  cli_launcher.py  gui_launcher.py  pyproject.toml
.github/workflows/: pr-validation.yml  release.yml
config/: controllers.example.csv  role_networks.example.xlsx
config/mock_scenarios/: auth_failed.json  missing_config.json  permission_denied.json  success_minimal.json
docs/: DEVELOPER_GUIDE_KO.html  DEVELOPER_GUIDE_KO.md  DIAGNOSTIC_MODE_KO.html  DIAGNOSTIC_MODE_KO.md  ERROR_CODES_KO.html  ERROR_CODES_KO.md  SECURITY_MODEL_KO.html  SECURITY_MODEL_KO.md  USER_GUIDE_KO.html  USER_GUIDE_KO.md
packaging/combined_release/: README_START_HERE_KO.txt
packaging/streamlit_portable/: README_WEBAPP_KO.txt  start_webapp.cmd  webapp_settings.cmd
src/wlc_role_acl_collector/: __init__.py  access_summary.py  acl_evaluator.py  aos8_parser.py  cli.py  config.py  (+16 more)
tests/: test_access_summary.py  test_acl_evaluator.py  test_cli.py  test_collector.py  test_config.py  test_diagnostic_codes.py  test_diagnostic_mode.py  test_diagnostic_report.py  test_diagnostics.py  test_gui_support.py  test_interactive.py  test_mock_server.py  test_parser.py  test_redaction.py  test_report.py  test_role_networks.py  test_tooling.py  test_web_logic.py
tools/: generate_doc_html.py  validate.ps1  verify_combined_release_package.py  verify_release_package.py  verify_streamlit_portable_package.py
(+5 files in other folders)
